# DaenerysCave

./: .gitignore  LICENSE  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/troy/daeneryscave/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/dracarys/: DracarysJni.cpp  DracarysJni.h
app/src/main/cpp/dracarys/decoders/: NVImageDecoder.c  NVmageDecoder.h  bilinear_resampling.c  bilinear_resampling.h
app/src/main/cpp/dracarys/decoders/gif/: gif.c  gif.h  gifcontrol.c  gifdecoding.c  gifdispose.c  gifdrawing.c  gifinit.c  giftime.c
app/src/main/cpp/dracarys/decoders/jpeg/: jpeg.c  jpeg.h  jpegexiforient.c
app/src/main/cpp/dracarys/decoders/jpeg/jpeglib/: jconfig.h  jpeglib.h
app/src/main/cpp/dracarys/decoders/png/: image.c  image.h  pngstruct.h  pngwutil.c
app/src/main/cpp/dracarys/decoders/video/: ff_frame_decoder.c  ff_frame_decoder.h
app/src/main/cpp/dracarys/decoders/webp/: webp.c  webp.h
app/src/main/cpp/dracarys/decoders/webp/libwebp/dec/: alpha_dec.c  alphai_dec.h  buffer_dec.c  frame_dec.c  idec_dec.c  io_dec.c  tree_dec.c  vp8_dec.c  vp8_dec.h  vp8i_dec.h  vp8l_dec.c  vp8li_dec.h  webp_dec.c  webpi_dec.h
app/src/main/cpp/dracarys/decoders/webp/libwebp/demux/: anim_decode.c  demux.c
app/src/main/cpp/dracarys/decoders/webp/libwebp/dsp/: dec.c  dec_mips32.c  dec_mips_dsp_r2.c  dec_msa.c  dec_neon.c  dec_sse2.c  dec_sse41.c  dsp.h  filters_mips_dsp_r2.c  filters_msa.c  lossless.c  lossless.h  lossless_common.h  lossless_mips_dsp_r2.c  lossless_msa.c  lossless_sse2.c  rescaler.c  rescaler_mips32.c  rescaler_mips_dsp_r2.c  rescaler_msa.c  rescaler_neon.c  rescaler_sse2.c  ssim_sse2.c  upsampling_mips_dsp_r2.c  upsampling_msa.c  upsampling_sse2.c  upsampling_sse41.c  yuv.h  yuv_mips32.c  yuv_mips_dsp_r2.c  yuv_sse2.c
app/src/main/cpp/dracarys/decoders/webp/libwebp/enc/: histogram_enc.h
app/src/main/cpp/dracarys/decoders/webp/libwebp/utils/: bit_reader_inl_utils.h  bit_reader_utils.h  color_cache_utils.h  endian_inl_utils.h  filters_utils.h  huffman_utils.c  huffman_utils.h  quant_levels_dec_utils.h  random_utils.h  rescaler_utils.c  rescaler_utils.h  thread_utils.c  thread_utils.h  utils.c  utils.h
app/src/main/cpp/dracarys/decoders/webp/libwebp/webp/: demux.h
app/src/main/cpp/dracarys/render/: CommonTools.h  VideoProject.cpp  VideoProject.h
app/src/main/cpp/ffmpeg/: android_log.h  cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c  ffmpeg_hw.c  ffmpeg_opt.c
app/src/main/cpp/ffmpeg/aarch64/: config.h
app/src/main/cpp/ffmpeg/armv7/: config.h
app/src/main/cpp/ffmpeg/localutils/: bitmaputils.c  bitmaputils.h  filterutils.c  filterutils.h  vec.c  vec.h
app/src/main/cpp/include/: CommonTools.h
app/src/main/cpp/libyuv/: libyuv.h
app/src/main/cpp/libyuv/aarch64/: compare_neon64.cc  row_neon64.cc
app/src/main/cpp/libyuv/armv7/: compare_neon.cc  row_neon.cc
app/src/main/cpp/libyuv/common/: compare.cc  compare_common.cc  convert.cc  cpu_id.cc  row_any.cc  row_common.cc  video_common.cc
app/src/main/cpp/libyuv/include/: convert.h
app/src/main/java/com/troy/daeneryscave/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/troy/daeneryscave/: ExampleUnitTest.kt
